@@ -6,20 +6,32 @@ plugins {
 group 'com.jacoblucas'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 11
+sourceCompatibility = "17.PREVIEW"
+targetCompatibility = "17.PREVIEW"
 
 repositories {
     mavenCentral()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
 
 dependencies {
-    compile "io.vavr:vavr:1.0.0-alpha-4"
-    compile "org.immutables:value:2.9.2"
-    compile "com.google.guava:guava:31.1-jre"
-    compile "org.apache.commons:commons-lang3:3.12.0"
+    implementation 'io.vavr:vavr:0.10.4'
+    implementation "org.immutables:value:2.9.2"
+    implementation "com.google.guava:guava:31.1-jre"
+    implementation "org.apache.commons:commons-lang3:3.12.0"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
-    testCompile 'org.hamcrest:hamcrest:2.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+test {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
